[project]
name = "reefsys"
version = "0.1.0"
description = ""
authors = [
    {name = "Tharsis Soares",email = "tharsissoares@proton.me"}
]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=46.0.7,<47.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "websockets (>=16.0,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
